--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,7 +9,26 @@
 }
 
 .board {
+  display: flex;
+  flex-wrap: wrap;
   width: 640px;
   height: 640px;
   background-color: rgb(26 104 30);
+}
+
+.cell {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80px;
+  height: 80px;
+  border: 3px solid rgb(0 0 0);
+}
+
+.stone {
+  width: 56px;
+  height: 56px;
+  background-color: rgb(255 255 255);
+  border: solid 3px;
+  border-radius: 56px;
 }
