--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -31,3 +31,11 @@
   background-color: rgb(255 255 255);
   border-radius: 56px;
 }
+
+.hint {
+  width: 30px;
+  height: 30px;
+  background-color: rgb(229 240 181);
+  border-radius: 30px;
+  opacity: 0.5;
+}
